Introduce un client oauth embed

--- a/settings/ocsiracauth.ini
+++ b/settings/ocsiracauth.ini
@@ -27,4 +27,11 @@ Attributes[]
 #Attributes[last_name]=example_cognome
 #Attributes[codfisc]=example_codicefiscale
 
-
+[EmbedOauth]
+clientId=XXXXXX
+clientSecret=XXXXXX
+redirectUri=https://my.example.com/your-redirect-url/
+urlAuthorize=https://service.example.com/authorize
+urlAccessToken=https://service.example.com/token
+urlResourceOwnerDetails=https://service.example.com/resource
+urlLogout=https://service.example.com/logout
