Esplicita gli errori di autenticazione Permette di autenticarsi con utenti di classi diverse da user

--- a/settings/ocsiracauth.ini
+++ b/settings/ocsiracauth.ini
@@ -10,10 +10,15 @@ ServerVariables[]
 #ServerVariables[]=example_emailAddress
 #ServerVariables[]=example_indirizzoResidenza
 #ServerVariables[]=example_cellulare
+
 RemoteIdGenerator=OCSiracAuthUserTools::generateUserRemoteId
+
 ExistingUserHandlers[]
 ExistingUserHandlers[]=OCSiracAuthUserTools::getUserByFiscalCode
 ExistingUserHandlers[]=OCSiracAuthUserTools::getUserByEmail
+
+ExistingUserClasses[]
+ExistingUserClasses[]=user
 
 [Mapper]
 #UserLogin=example_codicefiscale
