--- a/settings/ocsiracauth.ini
+++ b/settings/ocsiracauth.ini
@@ -40,3 +40,4 @@ urlAuthorize=https://service.example.com/authorize
 urlAccessToken=https://service.example.com/token
 urlResourceOwnerDetails=https://service.example.com/resource
 urlLogout=https://service.example.com/logout
+scopes=profile
